--- a/index-reproductor.html
+++ b/index-reproductor.html
@@ -24,7 +24,7 @@
 
             <nav>
                 <ul>
-                    <li><a href="/index.html"><i class="material-icons">home</i> Inicio</a></li>
+                    <li><a href="index.html"><i class="material-icons">home</i> Inicio</a></li>
                     <li><a href="#"><i class="material-icons">local_movies</i> Videos</a></li>
                     <li><a href="#"><i class="material-icons">priority_high</i> Acerca de</a></li>
 
@@ -33,7 +33,7 @@
             </nav>
 
             <script src="http://code.jquery.com/jquery-latest.js"></script>
-            <script src="/js/menu.js"></script>
+            <script src="js/menu.js"></script>
         </header>
         <div class="textos-hero">
             <h1>Reproductor de Música</h1>
