--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
                 </ul>
             </nav>
-           <script src="/js/menu.js"></script>
+           <script src="js/menu.js"></script>
         </header>
 
 
@@ -58,7 +58,7 @@
         <div class="textos-hero">
 
             <h1>Bienvenido a </h1>
-            <img src="/img/logo-header.png" alt="imagen">
+            <img src="img/logo-header.png" alt="imagen">
             <p>La música que quieras cuando quieras</p>
 
         </div>
@@ -104,17 +104,17 @@
                     <h2>Disfruta de todos los generos musicales que tenemos para ti.</h2>
 
                 </div>
-                <img src="/img/generos.jpg" alt="generos">
+                <img src="img/generos.jpg" alt="generos">
             </section>
             <section class="contenido-slider">
                 <div>
                     <h2>Puedes escuchar variedad de música en nuestro reproductor.</h2>
                     <a href="#">Ver más</a>
                 </div>
-                <img src="/img/reproductor.jpg" alt="Reproductor">
+                <img src="img/reproductor.jpg" alt="Reproductor">
             </section>
         </div>
-        <script src="/js/slider.js"></script>
+        <script src="js/slider.js"></script>
     </div>
 
 
@@ -125,7 +125,7 @@
             <article class="eventos-cont">
 
                 <!--Eventos Cerca-->
-                <img src="/img/calendario.png" alt="" height="290" width="200">
+                <img src="img/calendario.png" alt="" height="290" width="200">
 
                 <a class="twitter-timeline" data-width="700" data-height="440" data-theme="dark"
                     href="https://twitter.com/backstagemcr?ref_src=twsrc%5Etfw">Tweets by backstagemcr</a>
@@ -174,7 +174,7 @@
     <footer id="contacto">
         <div class="contenedor">
             <h2 class="titulo">Contact us</h2>
-            <form class="form" method="POST" action="/php/FormContacto.php">
+            <form class="form" method="POST" action="php/FormContacto.php">
                 <input class="input" type="text" name="nombre" id="nombre" placeholder="Nombre">
                 <input class="input" type="email" name="email" id="email" placeholder="Email">
                 <textarea class="input" name="mensaje" id="mensaje" cols="30" rows="10"
