--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="/js/jquery-3.2.1.js"></script>
+    <script src="js/jquery-3.2.1.js"></script>
     <script src="http://code.jquery.com/jquery-latest.js"></script>
 
     <meta name="viewport"
@@ -50,7 +50,7 @@
 
                 </ul>
             </nav>
-           <script src="/js/menu.js"></script>
+           <script src="js/menu.js"></script>
         </header>
 
 
