--- a/index-reproductor.html
+++ b/index-reproductor.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/estilo-reproductor.css">
     <link rel="stylesheet" href="css/estilo-menu.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+    <script src="js/jquery-3.2.1.js"></script>
     <script src="http://code.jquery.com/jquery-latest.js"></script>
 </head>
 
