--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    
+
     <script src="js/jquery-3.2.1.js"></script>
     <script src="http://code.jquery.com/jquery-latest.js"></script>
 
@@ -117,6 +117,7 @@
                 </div>
                 <img src="img/reproductor.jpg" alt="Reproductor">
             </section>
+            <script src="js/slider.js"></script>
         </div>
     </div>
 
@@ -128,7 +129,7 @@
             <article class="eventos-cont">
 
                 <!--Eventos Cerca-->
-                <img src="img/calendario.png" alt="" height="290" width="200">
+                <img src="img/calendario.png" alt="" height="50%" width="60%">
 
                 <a class="twitter-timeline" data-width="700" data-height="440" data-theme="dark"
                     href="https://twitter.com/backstagemcr?ref_src=twsrc%5Etfw">Tweets by backstagemcr</a>
