--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 }
                 </script>
             </div>
-            <img src="img/ubicacion.png" alt="ubicación">
+            <img src="img/ubicacion.png" alt="ubicación"height="50%" width="60%">
         </div>
 
         <div class="svg-wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150"
