--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
     <footer id="contacto">
         <div class="contenedor">
             <h2 class="titulo">Contact us</h2>
-            <form class="form" action="contacto.php" method="POST">
+            <form class="form" novalidate action="contacto.php" method="POST" target="_blank">
                 <input class="input" type="text" name="nombre" id="nombre" placeholder="Nombre" required>
                 <input class="input" type="email" name="email" id="email" placeholder="Email" required>
                 <textarea class="input" name="mensaje" id="mensaje" cols="30" rows="10"
