--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <li><a href="#"><i class="material-icons">home</i> Inicio</a></li>
                     <li><a href="index-reproductor.html"><i class="material-icons">library_music</i> Reproductor</a>
                     </li>
-                    <li><a href="#"><i class="material-icons">local_movies</i> Videos</a></li>
+                    <li><a href="index-videos.html"><i class="material-icons">local_movies</i> Videos</a></li>
                     <li><a href="#eventos"><i class="material-icons">local_activity</i> Eventos y Noticias</a></li>
                     <li><a href="#"><i class="material-icons">priority_high</i> Acerca de</a></li>
                     <li><a href="#contacto"><i class="material-icons">mail</i> Contactanos</a></li>
