--- a/index-videos.html
+++ b/index-videos.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Musically-Reproductor</title>
+    <title>Musically-Videos</title>
     <link rel="icon" type="img/png" href="img/logo.png" />
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/estilo-reproductor.css">
+    <link rel="stylesheet" href="css/estilo-videos.css">
     <link rel="stylesheet" href="css/estilo-menu.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
     <script src="js/jquery-3.2.1.js"></script>
@@ -27,8 +27,10 @@
             <nav>
                 <ul>
                     <li><a href="index.html"><i class="material-icons">home</i> Inicio</a></li>
-                    <li><a href="index-videos.html"><i class="material-icons">local_movies</i> Videos</a></li>
+                    <li><a href="index-reproductor.html"><i class="material-icons">library_music</i> Reproductor</a>
+                    </li>
                     <li><a href="#"><i class="material-icons">priority_high</i> Acerca de</a></li>
+                    
 
                 </ul>
                 <script src="js/menu.js"></script>
@@ -36,9 +38,9 @@
         </header>
 
         <div class="textos-hero">
-            <h1>Reproductor de Música</h1>
+            <h1>Reproductor de Videos</h1>
 
-            <p>Encuentra tu música favorita en nuestro reproductor</p>
+            <p>Encuentra los videos de tus artistas favoritos</p>
         </div>
         <div class="svg-hero" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150"
                 preserveAspectRatio="none" style="height: 100%; width: 100%;">
@@ -51,7 +53,7 @@
     
         <fom class="form bloq" action="buscar-(buscar)">
             <link rel="stylesheet" href="js/Busqueda.js">
-            <input type="text" placeholder="Buscar canciones o Albumes...">
+            <input type="text" placeholder="Buscar Videos...">
             <i class="ic ic-search"></i>
         </fom>
 
