--- a/index-videos.html
+++ b/index-videos.html
@@ -51,7 +51,7 @@
 
 
 
-    <form class="form bloq" action="">
+    <form class="form bloq" action="" alt="buscar videos">
         <link rel="stylesheet" href="">
         <input type="text" placeholder="Buscar Videos...">
         <i class="ic ic-search"></i>
