--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 
                 <div>
                     <h2>Puedes escuchar variedad de música en nuestro reproductor.</h2>
-                    <a href="#">Ver más</a>
+                    <a href="index-reproductor.html">Ver más</a>
                 </div>
                 <img src="img/reproductor.jpg" alt="Reproductor">
 
@@ -97,7 +97,7 @@
             <section class="contenido-slider">
                 <div>
                     <h2>Puedes ver los videos de tus artistas favoritos.</h2>
-                    <a href="#">Ver más</a>
+                    <a href="index-videos.html">Ver más</a>
                 </div>
                 <img src="img/video.png" alt="Videos">
 
