--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
             <article class="eventos-cont">
 
                 <!--Eventos Cerca-->
-                <img src="img/calendario.png" alt="" height="50%" width="60%">
+                <img src="img/calendario.png" alt="calendario" height="50%" width="60%">
 
                 <a class="twitter-timeline" data-width="700" data-height="440" data-theme="dark"
                     href="https://twitter.com/backstagemcr?ref_src=twsrc%5Etfw">Tweets by backstagemcr</a>
-                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 
                 <h2 class="titulo">y las últimas noticias del mundo musical.</h2><br>
