--- a/index-videos.html
+++ b/index-videos.html
@@ -49,16 +49,23 @@
             </svg></div>
     </header>
 
-
-
-    <form class="form bloq" action="" alt="buscar videos">
-        <link rel="stylesheet" href="">
-        <input type="text" placeholder="Buscar Videos...">
-        <i class="ic ic-search"></i>
+    <form action='https://musica-lly.000webhostapp.com/index-videos.html' id='searchthis' method='get' style='display:inline;'>
+        <input id='b-query' maxlength='255' name='q' placeholder="Buscar videos...">
+        <input class='blue' id='inputBusqueda' type='submit' value='Buscar'/>
     </form>
+    
+    <br><br>
 
-
-
+    <div id="cp_widget_e7815d40-f320-4b88-9086-aa83268f7330">...</div>
+    <script type="text/javascript">
+        var cpo = []; cpo["_object"] = "cp_widget_e7815d40-f320-4b88-9086-aa83268f7330"; cpo["_fid"] = "AkBAhr-0KpYW";
+        var _cpmp = _cpmp || []; _cpmp.push(cpo);
+        (function () {
+            var cp = document.createElement("script"); cp.type = "text/javascript";
+            cp.async = true; cp.src = "//www.cincopa.com/media-platform/runtime/libasync.js";
+            var c = document.getElementsByTagName("script")[0];
+            c.parentNode.insertBefore(cp, c);
+        })(); </script>
 
 
 </body>
