--- a/acercade.html
+++ b/acercade.html
@@ -10,18 +10,19 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 
-<body>
 
-    <a href="#modal" class="btn-open-popup">abrir pop</a>
+
+<body>
     
+    <a href="#modal" class="btn-open-popup">Acerca de</a>
+
 
     <div class="container-all" id="modal">
-
         <div class="popup">
             <div class="img"></div>
             <div class="container-text">
                 <h1>Musically.com</h1>
-                <img src="img/logo-header.png" alt="calendario" height="50%" width="60%">
+                <img src="img/logo-header.png" alt="Logo" height="50%" width="60%">
                 <p>Musically.com Es una pagina web creada por dos estudiantes universitario de la carrera de Ing.Software de
                     la Universidad Técnica Nacional(UTN).</p>
                 <p>Como propuesta al proyecto final del curso de apliciones en entorno web.</p>
