--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                         return yyyy + '-' + mm + '-' + dd;
                     }
                 </script>
-                <select name="gradoacademico" class="input" id="grado" type="select" required>
+                <select name="grado" class="input" id="grado" type="select" required>
                     <option>Primaria incompleta</option>
                     <option>Primaria completa</option>
                     <option>Secundaria incompleta</option>
