--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </li>
                     <li><a href="index-videos.html"><i class="material-icons">local_movies</i> Videos</a></li>
                     <li><a href="#eventos"><i class="material-icons">local_activity</i> Eventos y Noticias</a></li>
-                    <li><a href="#modal"><i class="material-icons">priority_high</i> Acerca de</a></li>
+                    <li><a href="#modal" click="#modal"><i class="material-icons">priority_high</i> Acerca de</a></li>
                     <li><a href="#contacto"><i class="material-icons">mail</i> Contactanos</a></li>
 
                 </ul>
