--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </li>
                     <li><a href="index-videos.html"><i class="material-icons">local_movies</i> Videos</a></li>
                     <li><a href="#eventos"><i class="material-icons">local_activity</i> Eventos y Noticias</a></li>
-                    <li><a href="#modal" click="#modal"><i class="material-icons">priority_high</i> Acerca de</a></li>
+                    <li><a href="javascript:abrir()"><i class="material-icons">priority_high</i> Acerca de</a></li>
                     <li><a href="#contacto"><i class="material-icons">mail</i> Contactanos</a></li>
 
                 </ul>
@@ -91,15 +91,19 @@
             <div class="container-text">
                 <h1>Musically.com</h1>
                 <img src="img/logo-header.png" alt="Logo" height="50%" width="60%">
-                <p>Musically.com Es una pagina web creada por dos estudiantes universitario de la carrera de
-                    Ing.Software de
-                    la Universidad Técnica Nacional(UTN).</p>
+                <p>Musically.com Es una pagina web creada por dos estudiantes universitarios de la carrera de
+                    Ing.Software de la Universidad Técnica Nacional(UTN).</p>
                 <p>Como propuesta al proyecto final del curso de apliciones en entorno web.</p>
             </div>
 
             <a href="#" class="btn-close-popup">X</a>
         </div>
     </div>
+    <script>
+        function abrir(){
+            document.getElementById("ventmodal").style.visibility="visible";
+        }
+    </script>
 
     <!--SLIDER DE CONTENIDO-->
     <div class="contenedor">
@@ -288,7 +292,7 @@
             <form class="form" action="contacto.php" method="POST">
                 <input class="input" type="text" name="nombre" id="nombre" placeholder="Nombre" required>
                 <input class="input" type="email" name="email" id="email" placeholder="Email" required>
-                <input name="fecha" id="fecha" type="date" class="input" max="2020-12-31" required>
+                <input name="fecha" id="fecha" type="date" class="input" max="2020-12-31" placeholder="Fecha de Nacimiento" required>
                 <select name="grado" class="input" id="grado" type="select" required>
                     <option>Primaria incompleta</option>
                     <option>Primaria completa</option>
@@ -301,9 +305,9 @@
                     required></textarea>
                     <p>
                         Seleccione su género:<br>
-                        <label><input type="radio" name="genero" value="masculino" class="input"  id="genero"> Masculino</label><br>
-                        <label><input type="radio" name="genero" value="femenino" class="input"   id="genero"> Femenino</label><br>
-                        <label><input type="radio" name="genero" value="indefinido" class="input" id="genero"> Indefinido</label>
+                        <label><input type="radio" name="genero" value="masculino" class="input"  id="genero" require> Masculino</label><br>
+                        <label><input type="radio" name="genero" value="femenino" class="input"   id="genero" require> Femenino</label><br>
+                        <label><input type="radio" name="genero" value="indefinido" class="input" id="genero" require> Indefinido</label>
                       </p><br><br>
                 <input class="input" type="submit" id="btnsend" value="Enviar">
             </form>
