--- a/index-videos.html
+++ b/index-videos.html
@@ -7,11 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Musically-Videos</title>
+
     <link rel="icon" type="img/png" href="img/logo.png" />
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/estilo-videos.css">
     <link rel="stylesheet" href="css/estilo-menu.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="css/estilo-acercade.css">
+
     <script src="js/jquery-3.2.1.js"></script>
     <script src="http://code.jquery.com/jquery-latest.js"></script>
 </head>
@@ -29,7 +32,7 @@
                     <li><a href="index.html"><i class="material-icons">home</i> Inicio</a></li>
                     <li><a href="index-reproductor.html"><i class="material-icons">library_music</i> Reproductor</a>
                     </li>
-                    <li><a href="#"><i class="material-icons">priority_high</i> Acerca de</a></li>
+                    <li><a href="#modal"><i class="material-icons">priority_high</i> Acerca de</a></li>
                 </ul>
                 <script src="js/menu.js"></script>
             </nav>
@@ -48,6 +51,21 @@
                     style="stroke: none; fill: #fff;"></path>
             </svg></div>
     </header>
+
+       <!--VENTANA MODAL-->
+       <div class="content" id="modal">
+        <div class="popup">
+            <div class="img"></div>
+            <div class="container-text">
+                <h1>Musically.com</h1>
+                <img src="img/logo-header.png" alt="Logo" height="50%" width="60%">
+                <p>Musically.com Es una pagina web creada por dos estudiantes universitarios de la carrera de
+                    Ing.Software de la Universidad Técnica Nacional(UTN).</p>
+                <p>Como propuesta al proyecto final del curso de apliciones en entorno web.</p>
+            </div>
+            <a href="#" class="btn-close-popup">X</a>
+        </div>
+    </div>
 
     <form action='https://musica-lly.000webhostapp.com/index-videos.html' id='searchthis' method='get' style='display:inline;'>
         <input id='b-query' maxlength='255' name='q' placeholder="Buscar videos...">
