--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
 
 <body>
 
-
     <!--ENCABEZADO DE LA PAGINA-->
     <header class="hero">
         <header>
@@ -52,7 +51,7 @@
                     </li>
                     <li><a href="index-videos.html"><i class="material-icons">local_movies</i> Videos</a></li>
                     <li><a href="#eventos"><i class="material-icons">local_activity</i> Eventos y Noticias</a></li>
-                    <li><a href="javascript:abrir()"><i class="material-icons">priority_high</i> Acerca de</a></li>
+                    <li><a href="#modal"><i class="material-icons">priority_high</i> Acerca de</a></li>
                     <li><a href="#contacto"><i class="material-icons">mail</i> Contactanos</a></li>
 
                 </ul>
@@ -85,7 +84,7 @@
     </section>
 
     <!--VENTANA MODAL-->
-    <div class="container-all" id="modal">
+    <div class="content" id="modal">
         <div class="popup">
             <div class="img"></div>
             <div class="container-text">
@@ -95,15 +94,9 @@
                     Ing.Software de la Universidad Técnica Nacional(UTN).</p>
                 <p>Como propuesta al proyecto final del curso de apliciones en entorno web.</p>
             </div>
-
             <a href="#" class="btn-close-popup">X</a>
         </div>
     </div>
-    <script>
-        function abrir(){
-            document.getElementById("ventmodal").style.visibility="visible";
-        }
-    </script>
 
     <!--SLIDER DE CONTENIDO-->
     <div class="contenedor">
