--- a/NewMessage.html
+++ b/NewMessage.html
@@ -13,14 +13,14 @@
     <script src="js/script.js"></script>
 </head>
 <body>
-
+   
     <section class="form_wrap">
         
         <section class="mensaje-exito">
             <h1>SU MENSAJE SE ENVIÓ EXITOSAMENTE</h1>
+            <p>Su sugerencia será contestada lo mas pronto posible</p>
             <a href="index.html">Enviar nuevo mensaje</a>
         </section>
-
     </section>
 
 </body>
