--- a/index-reproductor.html
+++ b/index-reproductor.html
@@ -54,10 +54,9 @@
     </header>
 
 
-    <form class="form bloq" action="">
-        <link rel="stylesheet" href="">
-        <input type="text" placeholder="Buscar canciones o Albumes...">
-        <i class="ic ic-search"></i>
+    <form action='https://musica-lly.000webhostapp.com/index-reproductor.html' id='searchthis' method='get' style='display:inline;'>
+        <input id='b-query' maxlength='255' name='q' placeholder="Buscar Canciones...">
+        <input class='blue' id='inputBusqueda' type='submit' value='Buscar'/>
     </form>
     <br><br>
 
