--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
         </div>
         <script src="js/contacto.js"></script>
     </footer>
+    <script src="https://cmp.osano.com/16BZ9HRuIUC3J2qhP/f23a4cd0-a5b2-4c74-94fa-23a58f4536c7/osano.js"></script>
 </body>
 
 </html>
